Stop blog posts from overflowing on mobile

--- a/style.css
+++ b/style.css
@@ -2,12 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+.prose pre {
+    max-width: calc(100vw - 2rem);
+}
+
+
 /* KATEX */
 
 /* Fix Tailwind making fraction line very light */
 .katex .frac-line {
     @apply border-gray-700;
 }
+
 
 /* DRACULA THEME */
 
